objects/MS_Task__c.object
<CustomObject>
    <description>Object to accommodate Task information related to Managed Services</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Job__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Time_Taken__c</fullName>
        <description>This field holds the overridden value of time entered by superuser or project manager</description>
        <label>Overridden Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This is used to capture the comments mentioned by users on the task.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_by_Convayr__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in convayr to identify the newly created MS Task records</description>
        <label>Created by Convayr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_Required__c</fullName>
        <description>This holds the value of estimated time required for completing a particular task.</description>
        <label>Estimated Time Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used for SmartSheets Integration</description>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Ticket_Number__c</fullName>
        <description>Input field on UI to hold the value in different contexts</description>
        <label>Company ID/Job Number/ IT Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Logged_In_User_Task_Owner__c</fullName>
        <description>If logged in user is task owner return &apos;true&apos; otherwise &apos;false&apos;</description>
        <formula>IF(Owner:User.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Logged In User Task Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Region__c</fullName>
        <label>Job Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Non China</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>MS Tasks</relationshipLabel>
        <relationshipName>MS_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Task_Id__c</fullName>
        <description>This field retains the SFDC record id of the Legacy Task (standard) on New MS Task Record</description>
        <label>Legacy Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Time_Taken__c</fullName>
        <formula>IF(
				OR(ISBLANK(Task_Start_Time__c), ISBLANK(Task_End_Time__c)),
				&apos;0 minute&apos;,
    TEXT( FLOOR( ( (  (UNIXTIMESTAMP(Task_End_Time__c)*1000 - UNIXTIMESTAMP(Task_Start_Time__c)*1000 - Timer_Offset__c)/1000 ))/3600) ) &amp; &apos; hour &apos; &amp;
				TEXT(	FLOOR(MOD((( (UNIXTIMESTAMP(Task_End_Time__c)*1000 - UNIXTIMESTAMP(Task_Start_Time__c)*1000 - Timer_Offset__c)/1000 )), 3600)/60 ) + IF(FLOOR( MOD(MOD( (( (UNIXTIMESTAMP(Task_End_Time__c)*1000 - UNIXTIMESTAMP(Task_Start_Time__c)*1000 - Timer_Offset__c)/1000 )), 3600), 60) )&lt; 30, 0, 1) ) &amp; &apos; minutes &apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Calculated Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <description>This field holds the value of Time of the day at which particular task is scheduled to be picked up.</description>
        <label>Scheduled Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Smartsheet_Row_ID__c</fullName>
        <description>This will contain the unique value of RowID column from smartsheet. This is being used by convayr job</description>
        <externalId>true</externalId>
        <label>Smartsheet Row ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_time_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This was created to hold the value of legacy data - This field not being used in new MS logic</description>
        <label>Suggested time changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Systems__c</fullName>
        <description>This field holds the value of the platform applications</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automation Tools</fullName>
                </value>
                <value>
                    <fullName>Contact Coaching/Project Coaching</fullName>
                </value>
                <value>
                    <fullName>Hardware Issues</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Mail Sender</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>MFS/TC</fullName>
                </value>
                <value>
                    <fullName>Other/None</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>Percipio</fullName>
                </value>
                <value>
                    <fullName>Quaterly Conversations</fullName>
                </value>
                <value>
                    <fullName>Resource Planner</fullName>
                </value>
                <value>
                    <fullName>Sharepoint</fullName>
                </value>
                <value>
                    <fullName>Talent Central</fullName>
                </value>
                <value>
                    <fullName>TC+</fullName>
                </value>
                <value>
                    <fullName>VADC/SIOD</fullName>
                </value>
                <value>
                    <fullName>Tableau Dashboard</fullName>
                </value>
                <value>
                    <fullName>IGB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Pre Launch</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Post Launch</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Coaching &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Operational Tasks</fullName>
                </value>
                <value>
                    <fullName>Product Related Tasks</fullName>
                </value>
                <value>
                    <fullName>Pool Reach-Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Completed_On__c</fullName>
        <label>Task Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Date__c</fullName>
        <description>This field holds the value of Date on which particular task is scheduled.</description>
        <label>Task Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_End_Time__c</fullName>
        <label>Task End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Start_Time__c</fullName>
        <label>Task Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed – Appointment booked</fullName>
                    <isActive>false</isActive>
                    <label>Completed – Appointment booked</label>
                </value>
                <value>
                    <fullName>Completed – No further action</fullName>
                    <isActive>false</isActive>
                    <label>Completed – No further action</label>
                </value>
                <value>
                    <fullName>Completed – Sale made</fullName>
                    <isActive>false</isActive>
                    <label>Completed – Sale made</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                    <isActive>false</isActive>
                    <label>Deferred</label>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                    <isActive>false</isActive>
                    <label>Waiting on someone else</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Time_Recorded__c</fullName>
        <formula>if(
OR(ISBLANK(Task_Start_Time__c), ISBLANK(Task_End_Time__c)),Actual_Time_Taken__c,
IF(Actual_Time_Taken__c=0
, FLOOR( ( ( (UNIXTIMESTAMP(Task_End_Time__c)*1000 - UNIXTIMESTAMP(Task_Start_Time__c)*1000 - Timer_Offset__c)/1000 ))/60) + + IF(FLOOR( MOD(MOD( (( (UNIXTIMESTAMP(Task_End_Time__c)*1000 - UNIXTIMESTAMP(Task_Start_Time__c)*1000 - Timer_Offset__c)/1000 )), 3600), 60) )&lt; 30, 0, 1)
, Actual_Time_Taken__c 
) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Time Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Candidates QA</fullName>
                </value>
                <value>
                    <fullName>Additional Candidates Setup</fullName>
                </value>
                <value>
                    <fullName>Assessment Creation</fullName>
                </value>
                <value>
                    <fullName>Assessment Tracking - BOD/EOD Tracking and Reporting</fullName>
                </value>
                <value>
                    <fullName>Assessor Alignment</fullName>
                </value>
                <value>
                    <fullName>Bandwidth Deployment (Internal)</fullName>
                </value>
                <value>
                    <fullName>Batch Acceptance and TP intimation - Batch acceptance on Central portal</fullName>
                </value>
                <value>
                    <fullName>Batch Acceptance and TP intimation - Batch details entered in the tracker</fullName>
                </value>
                <value>
                    <fullName>Batch Acceptance and TP intimation - Other stakeholder intimation</fullName>
                </value>
                <value>
                    <fullName>Batch Acceptance and TP intimation - TP intimation</fullName>
                </value>
                <value>
                    <fullName>Billing Tracker</fullName>
                </value>
                <value>
                    <fullName>Build - Demo</fullName>
                </value>
                <value>
                    <fullName>Build - Iteration</fullName>
                </value>
                <value>
                    <fullName>Build - Update</fullName>
                </value>
                <value>
                    <fullName>Cab Delay</fullName>
                </value>
                <value>
                    <fullName>Candidate Changes</fullName>
                </value>
                <value>
                    <fullName>Candidate Completion check</fullName>
                </value>
                <value>
                    <fullName>Candidate Completion Check (extension)</fullName>
                </value>
                <value>
                    <fullName>Candidate Recall</fullName>
                </value>
                <value>
                    <fullName>Candidate Reminder</fullName>
                </value>
                <value>
                    <fullName>Candidate Reminder QA</fullName>
                </value>
                <value>
                    <fullName>Candidate Resend Invitation</fullName>
                </value>
                <value>
                    <fullName>Candidate Reset Assessment</fullName>
                </value>
                <value>
                    <fullName>Categorising Mailbox</fullName>
                </value>
                <value>
                    <fullName>Check Request for all details</fullName>
                </value>
                <value>
                    <fullName>Clean Data</fullName>
                </value>
                <value>
                    <fullName>Client Portal Acceptance</fullName>
                </value>
                <value>
                    <fullName>Client Portal Upload</fullName>
                </value>
                <value>
                    <fullName>Client Result Approval</fullName>
                </value>
                <value>
                    <fullName>Contact Coaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timer_Offset__c</fullName>
        <description>Backend use only. It stores the interval time of play/pause of timer.</description>
        <label>Timer Offset (System Used Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_Resumed_At__c</fullName>
        <description>Backend use only. It stores the timestamp at which the timer is resumed for task.</description>
        <label>Timer Resumed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timer_Stopped_At__c</fullName>
        <description>Backend use only. It stores the timestamp at which the timer is stopped for task.</description>
        <label>Timer Stopped At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UnScheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is only used to retain the legacy data of Task for data migration, not used anywhere in new MS logic</description>
        <label>Unscheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Lookup_System_Used_Only__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used in LWC component to work as user lookup input field.
THIS FIELD SHOULD NOT HAVE FILTERS AND SHOULD NOT BE DELETED.</description>
        <label>User Lookup (System Used Only)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MS_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MS Task</label>
    <nameField>
        <displayFormat>TSK-{00000}</displayFormat>
        <label>MS Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Tasks</pluralLabel>
    <recordTypes>
        <fullName>General_MS_Task</fullName>
        <active>true</active>
        <label>General MS Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>MS_Analytics</fullName>
        <active>true</active>
        <label>MS Analytics</label>
    </recordTypes>
    <recordTypes>
        <fullName>TA_Corporate</fullName>
        <active>true</active>
        <label>TA - Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>TA_Vocational</fullName>
        <active>true</active>
        <label>TA - Vocational</label>
    </recordTypes>
    <recordTypes>
        <fullName>Talent_Management</fullName>
        <active>true</active>
        <label>Talent Management</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Actual_Time_On_Completed_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Task_Status__c, &quot;Completed&quot;),
ISBLANK(Actual_Time_Taken__c),ISNEW(),RecordType.DeveloperName = &quot;General_MS_Task&quot;)</errorConditionFormula>
        <errorMessage>Actual Time Taken should not be blank if Task Staus is &apos;Completed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_IT_Ticket_Number_Editing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Task_Type__c, &quot;IT Issues&quot;),
ISPICKVAL(Task_Type__c, &quot;Floor Support/Live QA&quot;)),
ISBLANK(IT_Ticket_Number__c))</errorConditionFormula>
        <errorMessage>IT Ticket Number should not be blank if Task Type value is &apos;IT Issues&apos;  or &apos;Floor Support/Live QA&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_In_progress_MS_Task_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Task_Status__c, &quot;In Progress&quot;),
ISNEW(),RecordType.DeveloperName = &quot;General_MS_Task&quot;)</errorConditionFormula>
        <errorMessage>You cannot create MS Task with &apos;In Progress&apos; Task Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Past_Task_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISNEW(), ISCHANGED(Task_Date__c)), Task_Date__c &lt; TODAY(),RecordType.DeveloperName &lt;&gt; &quot;General_MS_Task&quot;, NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>You cannot schedule a task in the past, please select current or future date</errorMessage>
    </validationRules>
</CustomObject>